--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -10,6 +10,7 @@ set(AL_HAS_ROCM @AL_HAS_ROCM@)
 set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
 set(AL_HAS_HOST_TRANSFER @AL_HAS_HOST_TRANSFER@)
 set(AL_HAS_NCCL @AL_HAS_NCCL@)
+set(AL_HAS_ROCTRACER @AL_HAS_ROCTRACER@)
 
 set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@" CACHE FILEPATH
   "The MPI CXX compiler wrapper.")
@@ -28,6 +29,10 @@ if (AL_HAS_ROCM)
   if (AL_HAS_NCCL)
     find_dependency(rccl)
   endif (AL_HAS_NCCL)
+
+  if (AL_HAS_ROCTRACER)
+    find_dependency(Roctracer COMPONENTS roctx)
+  endif ()
 elseif (AL_HAS_CUDA)
 
   # The API for Aluminum does not require that CUDA language support
