--- a/cmake/Al_config.hpp.in
+++ b/cmake/Al_config.hpp.in
@@ -1,5 +1,11 @@
 #pragma once
 
+#define AL_VERSION_MAJOR "@ALUMINUM_VERSION_MAJOR@"
+#define AL_VERSION_MINOR "@ALUMINUM_VERSION_MINOR@"
+#define AL_VERSION_PATCH "@ALUMINUM_VERSION_PATCH@"
+#define AL_VERSION "@ALUMINUM_VERSION@"
+#define AL_GIT_VERSION "@ALUMINUM_GIT_VERSION@"
+
 #cmakedefine AL_HAS_CUDA
 #cmakedefine AL_HAS_MPI_CUDA
 #cmakedefine AL_HAS_HOST_TRANSFER
