--- a/cmake/Al_config.hpp.in
+++ b/cmake/Al_config.hpp.in
@@ -27,13 +27,17 @@
 #define AL_GPU_RT(symb) AL_ADD_PREFIX(AL_GPU_RUNTIME_PREFIX, symb)
 
 // Functions
+#define AlGpuDeviceGetAttribute AL_GPU_RT(DeviceGetAttribute)
 #define AlGpuDeviceGetStreamPriorityRange \
     AL_GPU_RT(DeviceGetStreamPriorityRange)
 #define AlGpuDeviceSynchronize AL_GPU_RT(DeviceSynchronize)
+#define AlGpuEventCreate AL_GPU_RT(EventCreate)
 #define AlGpuEventCreateWithFlags AL_GPU_RT(EventCreateWithFlags)
 #define AlGpuEventDestroy AL_GPU_RT(EventDestroy)
+#define AlGpuEventElapsedTime AL_GPU_RT(EventElapsedTime)
 #define AlGpuEventQuery AL_GPU_RT(EventQuery)
 #define AlGpuEventRecord AL_GPU_RT(EventRecord)
+#define AlGpuEventSynchronize AL_GPU_RT(EventSynchronize)
 #define AlGpuGetDevice AL_GPU_RT(GetDevice)
 #define AlGpuGetDeviceCount AL_GPU_RT(GetDeviceCount)
 #define AlGpuGetErrorString AL_GPU_RT(GetErrorString)
