Support half with MPI.
This adds support for half to the MPI and Host-Transfer backends, and
support for testing half datatypes across all backends.

--- a/include/aluminum/CMakeLists.txt
+++ b/include/aluminum/CMakeLists.txt
@@ -1,11 +1,12 @@
 set_source_path(THIS_DIR_HEADERS
-  internal.hpp
-  progress.hpp
   base.hpp
+  datatypes.hpp
+  internal.hpp
   mempool.hpp
   mpi_comm_and_stream_wrapper.hpp
   mpi_impl.hpp
   profiling.hpp
+  progress.hpp
   state.hpp
   trace.hpp
   tuning_params.hpp
