--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,6 +1,6 @@
 # This is a simple target. Just needs Al_config.hpp in its include path.
 add_executable(al_info al_info.cpp)
-target_include_directories(al_info PRIVATE "${CMAKE_BINARY_DIR}")
+target_link_libraries(al_info PRIVATE Al)
 install(
   TARGETS al_info
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
